--- a/colore.html
+++ b/colore.html
@@ -14,7 +14,7 @@
 <link rel="apple-touch-startup-image" sizes="1536x2008" href="images/splash/splash-screen-ipad-portrait-retina.png"   media="(device-width: 768px)	and (orientation: portrait)	and (-webkit-device-pixel-ratio: 2)"/>
 <link rel="apple-touch-startup-image" sizes="1496x2048" href="images/splash/splash-screen-ipad-landscape-retina.png"   media="(device-width: 768px)	and (orientation: landscape)	and (-webkit-device-pixel-ratio: 2)"/>
 
-<title>Il Bouquet</title>
+<title>Il colore del vestito</title>
 
 <link href="styles/style.css"     		 rel="stylesheet" type="text/css">
 <link href="styles/framework.css" 		 rel="stylesheet" type="text/css">
@@ -119,15 +119,28 @@
                 <div class="portfolio-one">
                     <div class="portfolio-one-item full-bottom">
                         <div class="portfolio-one-image">
-                            <img src="images/pictures/1.jpg" class="responsive-image">
+                            <img src="images/pictures/10.jpg" class="responsive-image">
                         </div>
                         <div class="portfolio-one-text">
-                            <h3 class="title">Il Bouquet</h3>
-                            <em class="subtitle">L'ultimo omaggio del fidanzato</em><br>
+                            <h3 class="title">Il colore del vestito</h3>
+                            <em class="subtitle">Come scegliere il colore del vestito</em><br>
 							<br>
-                            <p class="half-bottom">
-                                Secondo la tradizione il bouquet e l'ultimo omaggio dello sposo per la sposa come fidanzato. Lo sposo lo deve comprare e che lo faccia recapitare al mattino a casa della sposa; in realtà è la sposa a sceglierlo in quanto deve armonizzarlo con suo abito. <br><br>Alla fine della cerimonia, la sposa lancia il suo bouquet di fiori verso un gruppo di donne nubili, che competono per afferrarlo; secondo la tradizione la donna che prende il bouquet avrà la fortuna di essere la prossima a sposarsi. 
-                            </p>            
+                            <p class="half-bottom">Per la scelta del colore del vestito da sposa, ci sono superstizioni popolari che indicano quali sono quelli fortunati e quelli da evitare.</p>
+                <ul class=" list">
+                    <li style="padding: 5px">il più favorito anche dalla sorte è ovviamente il bianco; </li>
+                    <li style="padding: 5px">il blu indica sincerità da parte della sposa; </li>
+                    <li style="padding: 5px">il verde timidezza; </li>
+                    <li style="padding: 5px">il nero pentimento; </li>
+                    <li style="padding: 5px">l'avorio preannuncia una vita turbolenta; </li>
+                    <li style="padding: 5px">il marrone e il grigio predicono che gli sposi andranno a vivere lontano o in campagna; </li>
+                    <li style="padding: 5px">il rosa predice una perdita economica; </li>
+                    <li style="padding: 5px">il rosso è desiderio di morte;</li>
+                    <li style="padding: 5px">il giallo mancanza di stima da parte della sposa. </li>
+                </ul>
+                <p>Tutti gli invitati sono tenuti ad evitare il colore bianco per il loro abbigliamento, così come sarebbe, per tradizione, da evitare il nero, anche se oggi quest'ultimo colore è molto usato, soprattutto nel caso di ricevimenti serali.</p>
+                
+                            </p> 
+								
 							<!--
                             <div class="portfolio-one-links">
                                 <a href="#"><i class="fa fa-arrow-right"></i> Visit Project</a>
