--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 <link rel="apple-touch-startup-image" sizes="1536x2008" href="images/splash/splash-screen-ipad-portrait-retina.png"   media="(device-width: 768px)	and (orientation: portrait)	and (-webkit-device-pixel-ratio: 2)"/>
 <link rel="apple-touch-startup-image" sizes="1496x2048" href="images/splash/splash-screen-ipad-landscape-retina.png"   media="(device-width: 768px)	and (orientation: landscape)	and (-webkit-device-pixel-ratio: 2)"/>
 
-<title>Epsilon Mobile Framework - Version 2.0</title>
+<title>Contattaci</title>
 
 <link href="styles/style.css"     		 rel="stylesheet" type="text/css">
 <link href="styles/framework.css" 		 rel="stylesheet" type="text/css">
@@ -51,7 +51,7 @@
     <div class="outer-nav">
         <div class="inner-nav">
             <div class="nav-item">
-                <a href="index.html">
+                <a href="index.html" class="active-item">
                     <i class="nav-icon fa fa-home"></i>
                     Home
                 </a>
@@ -59,60 +59,53 @@
             <div class="nav-item">
                 <a href="#" class="deploy-nav-sub-item">
                     <i class="nav-icon fa fa-cog"></i>
-                    Features
-                </a>
+                    Devi ricordarti che...
+                </a>				
                 <div class="nav-sub-item">
-                    <a href="features-type.html">Type</a>
-                    <a href="features-jquery.html">jQuery</a>
-                    <a href="features-others.html">Others</a>
-                </div>
-            </div>
-            <div class="nav-item">
-                <a href="#" class="deploy-nav-sub-item">
-                    <i class="nav-icon fa fa-camera"></i>
-                    Gallery
-                </a>
-                <div class="nav-sub-item">
-                    <a href="gallery-wide.html">Thumbs Wide</a>
-                    <a href="gallery-round.html">Thumbs Round</a>
-                    <a href="gallery-square.html">Thumbs Square</a>
+                    <a href="bouquet.html">Il Bouquet</a>
+                    <a href="fedi.html">Le fedi</a>
+                    <a href="confetti.html">I Confetti</a>
+                    <a href="giarrettiera.html">La Giarrettiera</a>
+                    <a href="bomboniera.html">La Bomboniera</a>
                 </div>
             </div>
             <div class="nav-item">
                 <a href="#" class="deploy-nav-sub-item">
                     <i class="nav-icon fa fa-picture-o"></i>
-                    Portfolio
+                    Prima e durante...
                 </a>
-                <div class="nav-sub-item">
-                    <a href="portfolio-adaptive.html">Adaptive</a>
-                    <a href="portfolio-one.html">One Column</a>
-                    <a href="portfolio-two.html">Two Columns</a>
-                    <a href="portfolio-wide.html">Wide Columns</a>
+				<div class="nav-sub-item">
+                    <a href="matrimonio_prima.html">Prima del Matrimonio</a>
+                    <a href="matrimonio_dopo.html">Dopo la Cerimonia</a>
                 </div>
             </div>
             <div class="nav-item">
                 <a href="#" class="deploy-nav-sub-item">
                     <i class="nav-icon fa fa-files-o"></i>
-                    Pages
-                </a>
-                <div class="nav-sub-item">
-                    <a href="page-soon.html">Soon Page</a>
-                    <a href="page-error.html">Error Page</a>
-                    <a href="page-profile.html">Profile Page</a>
-                    <a href="page-timeline.html">Timeline Page</a>
-                    <a href="page-updates.html">Updates Page</a>
+                    Saper scegliere bene...
+                </a>				
+				<div class="nav-sub-item">
+                    <a href="giorno.html">Il Giorno adatto</a>
+                    <a href="mese.html">Il Mese adatto</a>
+                    <a href="colore.html">Il colore del vestito</a>
                 </div>
             </div>
             <div class="nav-item">
-                <a href="contact.html" class="active-item">
+                <a href="anniversari.html">
                     <i class="nav-icon fa fa-envelope"></i>
-                    Contact
+                    Gli Anniversari
+                </a>
+            </div>
+            <div class="nav-item">
+                <a href="contact.html">
+                    <i class="nav-icon fa fa-envelope"></i>
+                    Contattaci
                 </a>
             </div>
             <div class="nav-item">
                 <a id="closeMenu" href="#">
                     <i class="nav-icon fa fa-times"></i>
-                    Close
+                    Chiudi
                 </a>
             </div>
         </div>
@@ -121,24 +114,13 @@
     <div class="perspective_container"><!--the "moving to the left" content box-->
         <div class="wrapper"><!-- wrapper needed for scroll -->
 
-            <div class="maps-container">
-                <iframe class="responsive-image maps" src="https://maps.google.com/?ie=UTF8&amp;ll=47.595131,-122.330414&amp;spn=0.006186,0.016512&amp;t=h&amp;z=17&amp;output=embed"></iframe>
-            </div>
-
             <div class="content">
                 <div class="decoration"></div>
                 <div class="one-half-responsive">
-                    <h4>Send us an email!</h4>
-                    <p>Use the form to send us a message, it's AJAX and PHP powered and it's easy to use!</p>
+                    <h4>Contattaci</h4>
+                    <p>Se vuoi contattarci per esporci dei dubbi, avere informazioni o richiedere uno spazio sponsor su questa o altre APP, non esitare a contattarci!<br><br>Ti ricordiamo che SiGi Technologies sviluppa applicazioni come questa anche per la tua azienda, crea una app e fatti conoscere!</p>
                     <div class="container no-bottom">
                         <div class="contact-form no-bottom"> 
-                            <div class="formSuccessMessageWrap" id="formSuccessMessageWrap">
-                                <div class="big-notification green-notification">
-                                    <h3 class="uppercase">Message Sent </h3>
-                                    <a href="#" class="close-big-notification">x</a>
-                                    <p>Your message has been successfuly sent. Please allow up to 48 hours for a reply! Thank you!</p>
-                                </div>
-                            </div>
                         
                             <form action="php/contact.php" method="post" class="contactForm" id="contactForm">
                                 <fieldset>
@@ -182,37 +164,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="decoration hide-if-responsive"></div>
-                <div class="one-half-responsive last-column">
-                    <div class="container no-bottom">
-                        <h4>Contact Information</h4>
-                        <p>
-                            <strong>Postal Information</strong><br>
-                            PO Box 16122 Collins Street West<br>
-                            Victoria 8007 Australia
-                        </p>
-                        <p>
-                            <strong>Envato Headquarters</strong><br>
-                            121 King Street, Melbourne <br>
-                            Victoria 3000 Australia
-                        </p>
-                        <p>
-                            <strong>Contact Information:</strong><br>
-                            <a href="#" class="contact-call"><i class="fa fa-phone"></i>Phone: + 123 456 7890</a>
-                            <a href="#" class="contact-text"><i class="fa fa-comments"></i>Message: + 123 456 7890</a>
-                            <a href="#" class="contact-mail"><i class="fa fa-envelope"></i>Email: mail@doamin.com</a>
-                            <a href="#" class="contact-facebook"><i class="fa fa-facebook"></i>Fanpage: enabled.labs</a>
-                            <a href="#" class="contact-twitter"><i class="fa fa-twitter"></i>Twitter: @iEnabled</a>
-                        </p>
-                    </div>
-                </div>                
-                <div class="decoration"></div>
                 
                 <div class="footer-section">
                     <p class="footer-text">
-                        Copyright 2014.<br>
-                        All rights reserved.
-                    </p>
+                    Copyright 2014 SiGi Technologies.<br>
+                    All rights reserved.
+                </p>
                     <div class="footer-icons">
                         <a href="#" class="footer-facebook-icon"><i class="fa fa-facebook"></i></a>
                         <a href="#" class="footer-google-icon"><i class="fa fa-google-plus"></i></a>
