--- a/fedi.html
+++ b/fedi.html
@@ -14,7 +14,7 @@
 <link rel="apple-touch-startup-image" sizes="1536x2008" href="images/splash/splash-screen-ipad-portrait-retina.png"   media="(device-width: 768px)	and (orientation: portrait)	and (-webkit-device-pixel-ratio: 2)"/>
 <link rel="apple-touch-startup-image" sizes="1496x2048" href="images/splash/splash-screen-ipad-landscape-retina.png"   media="(device-width: 768px)	and (orientation: landscape)	and (-webkit-device-pixel-ratio: 2)"/>
 
-<title>Il Bouquet</title>
+<title>Le fedi</title>
 
 <link href="styles/style.css"     		 rel="stylesheet" type="text/css">
 <link href="styles/framework.css" 		 rel="stylesheet" type="text/css">
@@ -119,15 +119,34 @@
                 <div class="portfolio-one">
                     <div class="portfolio-one-item full-bottom">
                         <div class="portfolio-one-image">
-                            <img src="images/pictures/1.jpg" class="responsive-image">
+                            <img src="images/pictures/2.jpg" class="responsive-image">
                         </div>
                         <div class="portfolio-one-text">
-                            <h3 class="title">Il Bouquet</h3>
-                            <em class="subtitle">L'ultimo omaggio del fidanzato</em><br>
+                            <h3 class="title">Le fedi</h3>
+                            <em class="subtitle">Legare i sentimenti dei due amori</em><br>
 							<br>
                             <p class="half-bottom">
-                                Secondo la tradizione il bouquet e l'ultimo omaggio dello sposo per la sposa come fidanzato. Lo sposo lo deve comprare e che lo faccia recapitare al mattino a casa della sposa; in realtà è la sposa a sceglierlo in quanto deve armonizzarlo con suo abito. <br><br>Alla fine della cerimonia, la sposa lancia il suo bouquet di fiori verso un gruppo di donne nubili, che competono per afferrarlo; secondo la tradizione la donna che prende il bouquet avrà la fortuna di essere la prossima a sposarsi. 
-                            </p>            
+                               Gli antichi egizi credevano di aver individuato una vena che, partendo dall'anulare sinistro, arrivasse fino al cuore: lungo questa vena pensavano che corressero i sentimenti.<br><br>"Legare" l'anulare significa quindi garantirsi la fedeltà. <br><br>Per incoronare e sigillare l 'unione tra gli sposi gli antichi Romani si scambiavano anelli di ferro, per l'antica legge ebraica le fedi avevano tanta importanza ,solo lo scambio di questi anelli fosse sufficiente a rendere legale il matrimonio. <br><br>Nel matrimonio secondo il rito religioso è usanza che le fedi vengano portate all'altare dal testimone o da un bambino detto paggetto, legate ad un cuscino di pizzo dove il celebrante le benedice prima dello scambio. <br><br>Secondo diversi costumi, l'anello nuziale è l'ultimo di una serie di regali che si scambiano gli sposi in segno di giuramento prima di unirsi nel matrimonio; tra questi doni è compreso l'anello di fidanzamento.<br><br>
+							   La fede pesa dai <strong>3 gr. ai 16 gr.</strong>, viene chiamata in vari modi:</p>
+								<ul class="list">
+									<li style="padding: 3px;">la Classica, &egrave; tonda e smussata. </li>
+									<li style="padding: 3px;">la Francesina, &egrave; sottile e leggermente bombata. </li>
+									<li style="padding: 3px;">la Mantovana, &egrave; pi&ugrave; alta e pi&ugrave; piatta e di solito pesa di pi&ugrave;. </li>
+									<li style="padding: 3px;">la Etrusca, &egrave; piatta e decorata da scritte beneauguranti. </li>
+									<li style="padding: 3px;">la Sarda, &egrave; decorata come un pizzo chiacchierino. </li>
+									<li style="padding: 3px;">in Platino, &egrave; molto rara e costosa e poco usata. </li>
+									<li style="padding: 3px;">la Bicolore, due cerchi intrecciati di oro giallo e bianco. </li>
+									<li style="padding: 3px;">la Tricolore, tre cerchi intrecciati di oro giallo e bianco. </li>
+									<li style="padding: 3px;">la Unica, ha incastonato un diamante. </li>
+									<li style="padding: 3px;">la Ossolana, proviene dalla Valle Ossola, &egrave; l'espressione pi&ugrave; significativa dell'antica tradizione orafa della zona. Essa riporta 4 significativi simboli: La stella
+									<li style="padding: 3px;">alpina che raffigura la purezza, il grano saraceno la prosperit&agrave;, i nastri intrecciati la perpetuit&agrave; dell'unione ed infine le mezze sfere augurio di prolificit&agrave;. </li>
+									<li>la Ebraica, &egrave; in filigrana smaltata con decorazione di perline.
+									</li>
+									la Umbra, ha l'incisione del volto di una donna o di una coppia divisi da un bouquet di fiori.
+									</li>
+								</ul>
+                            </p> 
+								
 							<!--
                             <div class="portfolio-one-links">
                                 <a href="#"><i class="fa fa-arrow-right"></i> Visit Project</a>
