--- a/giarrettiera.html
+++ b/giarrettiera.html
@@ -14,7 +14,7 @@
 <link rel="apple-touch-startup-image" sizes="1536x2008" href="images/splash/splash-screen-ipad-portrait-retina.png"   media="(device-width: 768px)	and (orientation: portrait)	and (-webkit-device-pixel-ratio: 2)"/>
 <link rel="apple-touch-startup-image" sizes="1496x2048" href="images/splash/splash-screen-ipad-landscape-retina.png"   media="(device-width: 768px)	and (orientation: landscape)	and (-webkit-device-pixel-ratio: 2)"/>
 
-<title>Il Bouquet</title>
+<title>La Giarrettiera</title>
 
 <link href="styles/style.css"     		 rel="stylesheet" type="text/css">
 <link href="styles/framework.css" 		 rel="stylesheet" type="text/css">
@@ -119,15 +119,19 @@
                 <div class="portfolio-one">
                     <div class="portfolio-one-item full-bottom">
                         <div class="portfolio-one-image">
-                            <img src="images/pictures/1.jpg" class="responsive-image">
+                            <img src="images/pictures/4.jpg" class="responsive-image">
                         </div>
                         <div class="portfolio-one-text">
-                            <h3 class="title">Il Bouquet</h3>
-                            <em class="subtitle">L'ultimo omaggio del fidanzato</em><br>
+                            <h3 class="title">La Giarrettiera</h3>
+                            <em class="subtitle">Un pezzo del vestito della sposa che porta fortuna</em><br>
 							<br>
-                            <p class="half-bottom">
-                                Secondo la tradizione il bouquet e l'ultimo omaggio dello sposo per la sposa come fidanzato. Lo sposo lo deve comprare e che lo faccia recapitare al mattino a casa della sposa; in realtà è la sposa a sceglierlo in quanto deve armonizzarlo con suo abito. <br><br>Alla fine della cerimonia, la sposa lancia il suo bouquet di fiori verso un gruppo di donne nubili, che competono per afferrarlo; secondo la tradizione la donna che prende il bouquet avrà la fortuna di essere la prossima a sposarsi. 
-                            </p>            
+                            <p class="half-bottom">Tutto nasce nell'Europa del XIV secolo si riteneva che ottenere un pezzo del vestito della sposa portasse fortuna, per cui gli invitati cercavano di procurarsene o farsene consegnare una porzione. Nel XVII secolo gli invitati celibi dovevano impossessarsi delle giarrettiere della sposa fissandole poi al loro cappello, come segno di buona fortuna ma, per fortuna con il tempo queste usanze si sono trasformate nel lancio degli accessori (il bouquet, la giarrettiera, i guanti),per evitare che il vestito della sposa venisse rovinato o rotto.<br><br>
+
+La versione tradizionale vuole che <b>sia lo sposo a sfilare la giarrettiera e lanciarla ad uno degli ospiti</b>. La sposa pudica ,che non si vuole mostrare eccessivamente ,indossa la giarrettiera poco sopra al ginocchio o viene tirata in giù prima del rito del lancio, invece la sposa non tanto pudica alza la gonna dell'abito mostrando le gambe in modo da avere la rimozione dell'indumento al centro dell'attenzione. <b>Nei casi in cui la sposa non indossi la giarrettiera si lancia la scarpa destra della sposa</b>, sfilata direttamente da questa o da una delle sue damigelle o testimoni. Una altra tradizione prevedeva che la giarrettiera venisse fatta a pezzi dal marito e donata a più invitati. In modo simile si fa oggi in alcune zone d'Italia con la cravatta dello sposo, che viene tagliata in piccoli pezzi e distribuita tra gli uomini invitati in cambio di una piccola donazione in denaro da dare poi agli sposi .<br><br>
+
+Le donna colpita dal bouquet deve ballare insieme al uomo che ha presso la giarrettiera ; la tradizione dice che l'uomo deve dare la giarrettiera alla donna che ha presso il bouquet, per indossarla prima del ballo insieme. Se non si conoscono possono fare solo una fotografia insieme. Queste tradizioni sono sempre più rare e sconosciute.
+                            </p> 
+								
 							<!--
                             <div class="portfolio-one-links">
                                 <a href="#"><i class="fa fa-arrow-right"></i> Visit Project</a>
