--- a/index.html
+++ b/index.html
@@ -57,73 +57,47 @@
                 </a>
             </div>
             <div class="nav-item">
-                <a href="bouquet.html" class="deploy-nav-sub-item">
+                <a href="#" class="deploy-nav-sub-item">
                     <i class="nav-icon fa fa-cog"></i>
-                    Il Bouquet
-                </a>
+                    Devi ricordarti che...
+                </a>				
+                <div class="nav-sub-item">
+                    <a href="bouquet.html">Il Bouquet</a>
+                    <a href="fedi.html">Le fedi</a>
+                    <a href="confetti.html">I Confetti</a>
+                    <a href="giarrettiera.html">La Giarrettiera</a>
+                    <a href="bomboniera.html">La Bomboniera</a>
+                </div>
             </div>
             <div class="nav-item">
-                <a href="fedi.html" class="deploy-nav-sub-item">
-                    <i class="nav-icon fa fa-files-o"></i>
-                    Le fedi
-                </a>
-            </div>
-            <div class="nav-item">
-                <a href="confetti.html" class="deploy-nav-sub-item">
-                    <i class="nav-icon fa fa-files-o"></i>
-                    I Confetti
-                </a>
-            </div>
-            <div class="nav-item">
-                <a href="giarrettiera.html" class="deploy-nav-sub-item">
-                    <i class="nav-icon fa fa-camera"></i>
-                    La Giarrettiera
-                </a>
-            </div>			
-            <div class="nav-item">
-                <a href="bomboniera.html" class="deploy-nav-sub-item">
-                    <i class="nav-icon fa fa-files-o"></i>
-                    La bomboniera
-                </a>
-            </div>
-            <div class="nav-item">
-                <a href="matrimonio_prima.html" class="deploy-nav-sub-item">
+                <a href="#" class="deploy-nav-sub-item">
                     <i class="nav-icon fa fa-picture-o"></i>
-                    Prima del Matrimonio
+                    Prima e durante...
                 </a>
+				<div class="nav-sub-item">
+                    <a href="matrimonio_prima.html">Prima del Matrimonio</a>
+                    <a href="matrimonio_dopo.html">Dopo la Cerimonia</a>
+                </div>
             </div>
             <div class="nav-item">
-                <a href="matrimonio_dopo.html" class="deploy-nav-sub-item">
+                <a href="#" class="deploy-nav-sub-item">
                     <i class="nav-icon fa fa-files-o"></i>
-                    Dopo la Cerimonia
+                    Saper scegliere bene...
+                </a>				
+				<div class="nav-sub-item">
+                    <a href="giorno.html">Il Giorno adatto</a>
+                    <a href="mese.html">Il Mese adatto</a>
+                    <a href="colore.html">Il colore del vestito</a>
+                </div>
+            </div>
+            <div class="nav-item">
+                <a href="anniversari.html">
+                    <i class="nav-icon fa fa-envelope"></i>
+                    Gli Anniversari
                 </a>
             </div>
             <div class="nav-item">
-                <a href="giorno.html" class="deploy-nav-sub-item">
-                    <i class="nav-icon fa fa-files-o"></i>
-                    Il Giorno adatto
-                </a>
-            </div>
-            <div class="nav-item">
-                <a href="mese.html" class="deploy-nav-sub-item">
-                    <i class="nav-icon fa fa-files-o"></i>
-                    Il Mese adatto
-                </a>
-            </div>
-            <div class="nav-item">
-                <a href="colore.html" class="deploy-nav-sub-item">
-                    <i class="nav-icon fa fa-files-o"></i>
-                    Il colore del vestito
-                </a>
-            </div>
-            <div class="nav-item">
-                <a href="anniversari.html" class="deploy-nav-sub-item">
-                    <i class="nav-icon fa fa-files-o"></i>
-                    Gli anniversari
-                </a>
-            </div>
-            <div class="nav-item">
-                <a href="contattaci.html">
+                <a href="contact.html">
                     <i class="nav-icon fa fa-envelope"></i>
                     Contattaci
                 </a>
