--- a/matrimonio_dopo.html
+++ b/matrimonio_dopo.html
@@ -14,7 +14,7 @@
 <link rel="apple-touch-startup-image" sizes="1536x2008" href="images/splash/splash-screen-ipad-portrait-retina.png"   media="(device-width: 768px)	and (orientation: portrait)	and (-webkit-device-pixel-ratio: 2)"/>
 <link rel="apple-touch-startup-image" sizes="1496x2048" href="images/splash/splash-screen-ipad-landscape-retina.png"   media="(device-width: 768px)	and (orientation: landscape)	and (-webkit-device-pixel-ratio: 2)"/>
 
-<title>Il Bouquet</title>
+<title>Dopo la cerimonia</title>
 
 <link href="styles/style.css"     		 rel="stylesheet" type="text/css">
 <link href="styles/framework.css" 		 rel="stylesheet" type="text/css">
@@ -119,15 +119,17 @@
                 <div class="portfolio-one">
                     <div class="portfolio-one-item full-bottom">
                         <div class="portfolio-one-image">
-                            <img src="images/pictures/1.jpg" class="responsive-image">
+                            <img src="images/pictures/7.jpg" class="responsive-image">
                         </div>
                         <div class="portfolio-one-text">
-                            <h3 class="title">Il Bouquet</h3>
-                            <em class="subtitle">L'ultimo omaggio del fidanzato</em><br>
+                            <h3 class="title">Dopo la cerimonia</h3>
+                            <em class="subtitle">Alcune curiosità</em><br>
 							<br>
-                            <p class="half-bottom">
-                                Secondo la tradizione il bouquet e l'ultimo omaggio dello sposo per la sposa come fidanzato. Lo sposo lo deve comprare e che lo faccia recapitare al mattino a casa della sposa; in realtà è la sposa a sceglierlo in quanto deve armonizzarlo con suo abito. <br><br>Alla fine della cerimonia, la sposa lancia il suo bouquet di fiori verso un gruppo di donne nubili, che competono per afferrarlo; secondo la tradizione la donna che prende il bouquet avrà la fortuna di essere la prossima a sposarsi. 
-                            </p>            
+                            <p class="half-bottom">Una delle tradizioni molto comune è quella dell’<strong>uomo che porti in braccio la sposa oltre la soglia della loro casa primo ingresso</strong>. Questa tradizione ha origine da una credenza romana che fosse meglio per la moglie non inciampare entrando nella nuova casa.<br><br>
+
+Altre piccole superstizioni comunque arrivano già molto prima del fatidico giorno….infatti anche per scegliere il giorno delle nozze ci sono superstizioni infatti un antico proverbio dice "<b>Di Venere e di Marte ne'si sposa ne' si parte</b>" cioè non sposarsi e non partire in viaggi nei giorni di Martedì e Venerdì. Il martedì appartiene a Marte che è il Dio della guerra, mentre il venerdì è il giorno in cui furono creati gli spiriti maligni. In Norvegia invece il maggior numero di matrimoni si celebra proprio il venerdì ; giorno romantico per eccellenza perché sotto la protezione di venere, dea dell'amore e dell' armonia. 
+                            </p> 
+								
 							<!--
                             <div class="portfolio-one-links">
                                 <a href="#"><i class="fa fa-arrow-right"></i> Visit Project</a>
