--- a/matrimonio_prima.html
+++ b/matrimonio_prima.html
@@ -14,7 +14,7 @@
 <link rel="apple-touch-startup-image" sizes="1536x2008" href="images/splash/splash-screen-ipad-portrait-retina.png"   media="(device-width: 768px)	and (orientation: portrait)	and (-webkit-device-pixel-ratio: 2)"/>
 <link rel="apple-touch-startup-image" sizes="1496x2048" href="images/splash/splash-screen-ipad-landscape-retina.png"   media="(device-width: 768px)	and (orientation: landscape)	and (-webkit-device-pixel-ratio: 2)"/>
 
-<title>Il Bouquet</title>
+<title>Prima del Matrimonio</title>
 
 <link href="styles/style.css"     		 rel="stylesheet" type="text/css">
 <link href="styles/framework.css" 		 rel="stylesheet" type="text/css">
@@ -119,15 +119,26 @@
                 <div class="portfolio-one">
                     <div class="portfolio-one-item full-bottom">
                         <div class="portfolio-one-image">
-                            <img src="images/pictures/1.jpg" class="responsive-image">
+                            <img src="images/pictures/6.jpg" class="responsive-image">
                         </div>
                         <div class="portfolio-one-text">
-                            <h3 class="title">Il Bouquet</h3>
-                            <em class="subtitle">L'ultimo omaggio del fidanzato</em><br>
+                            <h3 class="title">Prima del Matrimonio</h3>
+                            <em class="subtitle">Ecco cosa si deve o non deve fare</em><br>
 							<br>
-                            <p class="half-bottom">
-                                Secondo la tradizione il bouquet e l'ultimo omaggio dello sposo per la sposa come fidanzato. Lo sposo lo deve comprare e che lo faccia recapitare al mattino a casa della sposa; in realtà è la sposa a sceglierlo in quanto deve armonizzarlo con suo abito. <br><br>Alla fine della cerimonia, la sposa lancia il suo bouquet di fiori verso un gruppo di donne nubili, che competono per afferrarlo; secondo la tradizione la donna che prende il bouquet avrà la fortuna di essere la prossima a sposarsi. 
-                            </p>            
+                            <p class="half-bottom"> 
+                <ul class="list">
+                    <li style="padding: 5px;">la sposa non si deve guardare allo specchio con il vestito da sposa il giorno del matrimonio; si può fare ma togliendo una scarpa, un orecchino o un guanto. </li>
+                    <li style="padding: 5px;">il diamante regalato se portato all'anulare o al polso sinistro conserva l'affetto coniugale.</li>
+                    <li style="padding: 5px;">porta sfortuna acquistare nello stesso momento l'anello di fidanzamento e le fedi nuziali. </li>
+                    <li style="padding: 5px;">è di cattivo augurio mettersi al dito la fede prima della celebrazione del matrimonio.</li>
+                    <li style="padding: 5px;">il velo indossato dalla sposa è considerato più fortunato se donato da una sposa felice.</li>
+                    <li style="padding: 5px;">lo sposo può offrire alla sposa alla fine del rito una spiga di grano, un gesto bene augurante che fa riferimento alla terra e alla fertilità.</li>
+                    <li style="padding: 5px;">gli sposi non si devono vedere prima dell'incontro in chiesa. Ma non solo: lo sposo non deve mai vedere il vestito della sposa se non al momento della cerimonia,vederlo prima porterebbe sfortuna.</li>
+                    <li style="padding: 5px;">lo sposo già uscito di casa per recarsi in chiesa non deve tornare sui propri passi meglio avere un amico o un testimone vicino in quel giorno per aiutarvi nelle urgenze.</li>
+                    <li style="padding: 5px;">non fate cadere le fedi in chiesa, se dovessero cadere andranno raccolte solo da chi celebra il rito.</li>
+                </ul>
+                            </p> 
+								
 							<!--
                             <div class="portfolio-one-links">
                                 <a href="#"><i class="fa fa-arrow-right"></i> Visit Project</a>
