--- a/mese.html
+++ b/mese.html
@@ -14,7 +14,7 @@
 <link rel="apple-touch-startup-image" sizes="1536x2008" href="images/splash/splash-screen-ipad-portrait-retina.png"   media="(device-width: 768px)	and (orientation: portrait)	and (-webkit-device-pixel-ratio: 2)"/>
 <link rel="apple-touch-startup-image" sizes="1496x2048" href="images/splash/splash-screen-ipad-landscape-retina.png"   media="(device-width: 768px)	and (orientation: landscape)	and (-webkit-device-pixel-ratio: 2)"/>
 
-<title>Il Bouquet</title>
+<title>Il Mese perfetto</title>
 
 <link href="styles/style.css"     		 rel="stylesheet" type="text/css">
 <link href="styles/framework.css" 		 rel="stylesheet" type="text/css">
@@ -119,15 +119,28 @@
                 <div class="portfolio-one">
                     <div class="portfolio-one-item full-bottom">
                         <div class="portfolio-one-image">
-                            <img src="images/pictures/1.jpg" class="responsive-image">
+                            <img src="images/pictures/9.jpg" class="responsive-image">
                         </div>
                         <div class="portfolio-one-text">
-                            <h3 class="title">Il Bouquet</h3>
-                            <em class="subtitle">L'ultimo omaggio del fidanzato</em><br>
+                            <h3 class="title">Il Mese perfetto</h3>
+                            <em class="subtitle">Come scegliere al meglio il Mese</em><br>
 							<br>
-                            <p class="half-bottom">
-                                Secondo la tradizione il bouquet e l'ultimo omaggio dello sposo per la sposa come fidanzato. Lo sposo lo deve comprare e che lo faccia recapitare al mattino a casa della sposa; in realtà è la sposa a sceglierlo in quanto deve armonizzarlo con suo abito. <br><br>Alla fine della cerimonia, la sposa lancia il suo bouquet di fiori verso un gruppo di donne nubili, che competono per afferrarlo; secondo la tradizione la donna che prende il bouquet avrà la fortuna di essere la prossima a sposarsi. 
-                            </p>            
+                            <p class="half-bottom"> <ul class="list">
+                    <li style="padding: 5px;">gennaio: porta affetto, gentilezza a fedeltà;</li>
+                    <li style="padding: 5px;">febbraio: mese ideale per gli amori e gli accoppiamenti, si identifica come la migliore scelta possibile;</li>
+                    <li style="padding: 5px;">marzo: promette sia gioia che pene;</li>
+                    <li style="padding: 5px;">aprile: porta soltanto gioie;</li>
+                    <li style="padding: 5px;">maggio: assolutamente nefasto; </li>
+                    <li style="padding: 5px;">giugno:avranno la fortuna di viaggiare molto, per terra e per mare, inoltre è questo il mese dedicato a Giunone, la dea che protegge l'amore e le nozze;</li>
+                    <li style="padding: 5px;">luglio: annuncia fatiche e lavoro per guadagnarsi la vita;</li>
+                    <li style="padding: 5px;">agosto: assicura una vita ricca di cambiamenti;</li>
+                    <li style="padding: 5px;">settembre: porta agli sposi ricchezze e allegria;</li>
+                    <li style="padding: 5px;">ottobre: porta molto amore ma poco denaro;</li>
+                    <li style="padding: 5px;">novembre: con tristi giornate, promette invece gioia e felicità; </li>
+                    <li style="padding: 5px;">dicembre: la neve assicura alla coppia amore eterno. </li>
+                </ul>
+                            </p> 
+								
 							<!--
                             <div class="portfolio-one-links">
                                 <a href="#"><i class="fa fa-arrow-right"></i> Visit Project</a>
