--- a/anniversari.html
+++ b/anniversari.html
@@ -14,7 +14,7 @@
 <link rel="apple-touch-startup-image" sizes="1536x2008" href="images/splash/splash-screen-ipad-portrait-retina.png"   media="(device-width: 768px)	and (orientation: portrait)	and (-webkit-device-pixel-ratio: 2)"/>
 <link rel="apple-touch-startup-image" sizes="1496x2048" href="images/splash/splash-screen-ipad-landscape-retina.png"   media="(device-width: 768px)	and (orientation: landscape)	and (-webkit-device-pixel-ratio: 2)"/>
 
-<title>Il Bouquet</title>
+<title>Gli Anniversari</title>
 
 <link href="styles/style.css"     		 rel="stylesheet" type="text/css">
 <link href="styles/framework.css" 		 rel="stylesheet" type="text/css">
@@ -119,15 +119,40 @@
                 <div class="portfolio-one">
                     <div class="portfolio-one-item full-bottom">
                         <div class="portfolio-one-image">
-                            <img src="images/pictures/1.jpg" class="responsive-image">
+                            <img src="images/pictures/11.jpg" class="responsive-image">
                         </div>
                         <div class="portfolio-one-text">
-                            <h3 class="title">Il Bouquet</h3>
-                            <em class="subtitle">L'ultimo omaggio del fidanzato</em><br>
+                            <h3 class="title">Gli anniversari</h3>
+                            <em class="subtitle">Da tenere sempre in mente</em><br>
 							<br>
-                            <p class="half-bottom">
-                                Secondo la tradizione il bouquet e l'ultimo omaggio dello sposo per la sposa come fidanzato. Lo sposo lo deve comprare e che lo faccia recapitare al mattino a casa della sposa; in realtà è la sposa a sceglierlo in quanto deve armonizzarlo con suo abito. <br><br>Alla fine della cerimonia, la sposa lancia il suo bouquet di fiori verso un gruppo di donne nubili, che competono per afferrarlo; secondo la tradizione la donna che prende il bouquet avrà la fortuna di essere la prossima a sposarsi. 
-                            </p>            
+                            <p class="half-bottom"><p>La tradizione ha assegnato particolari denominazioni agli anniversari di matrimonio, soprattutto con il crescere dell’importanza commerciale della festa. <b>Le principali ricorrenze sono il 25° anniversario, denominato nozze d’argento e il 50° anniversario, che prende il nome di nozze d’oro.</b></p><p>
+Esistono diversi nomi particolari per i vari anniversari. Ecco un elenco con il nome dato agli vari anniversari, anche se cambia di zona in zona: </p>
+<ul class="list-orizz">
+<li>1° Cotone  </li>
+<li>2° Carta</li>
+<li>3° Cuoio o Pelle</li>
+<li>4° Frutta e Fiori</li>
+<li>5° Legno</li>
+<li>6° Zucchero</li>
+<li>7° Rame o Lana</li>
+<li>8° Bronzo o Sale</li>
+<li>10° Stagno</li>
+<li>11° Acciaio</li>
+<li>12° Corda o Seta/Lino</li>
+<li>13° Pizzo/Merletto</li>
+<li>14° Avorio</li>
+<li>15° Porcellana</li>
+<li>20° Cristallo</li>
+<li>25° Argento</li>
+<li>35° Corallo</li>
+<li>40° Rubino</li>
+<li>45° Zaffiro</li>
+<li>50° Oro</li>
+<li>55° Smeraldo</li>
+</ul>
+                
+                            </p> 
+								
 							<!--
                             <div class="portfolio-one-links">
                                 <a href="#"><i class="fa fa-arrow-right"></i> Visit Project</a>
