--- a/bomboniera.html
+++ b/bomboniera.html
@@ -14,7 +14,7 @@
 <link rel="apple-touch-startup-image" sizes="1536x2008" href="images/splash/splash-screen-ipad-portrait-retina.png"   media="(device-width: 768px)	and (orientation: portrait)	and (-webkit-device-pixel-ratio: 2)"/>
 <link rel="apple-touch-startup-image" sizes="1496x2048" href="images/splash/splash-screen-ipad-landscape-retina.png"   media="(device-width: 768px)	and (orientation: landscape)	and (-webkit-device-pixel-ratio: 2)"/>
 
-<title>Il Bouquet</title>
+<title>La Bomboniera</title>
 
 <link href="styles/style.css"     		 rel="stylesheet" type="text/css">
 <link href="styles/framework.css" 		 rel="stylesheet" type="text/css">
@@ -119,15 +119,15 @@
                 <div class="portfolio-one">
                     <div class="portfolio-one-item full-bottom">
                         <div class="portfolio-one-image">
-                            <img src="images/pictures/1.jpg" class="responsive-image">
+                            <img src="images/pictures/5.jpg" class="responsive-image">
                         </div>
                         <div class="portfolio-one-text">
-                            <h3 class="title">Il Bouquet</h3>
-                            <em class="subtitle">L'ultimo omaggio del fidanzato</em><br>
+                            <h3 class="title">La Bomboniera</h3>
+                            <em class="subtitle">Il dono di ringraziamento degli sposi</em><br>
 							<br>
-                            <p class="half-bottom">
-                                Secondo la tradizione il bouquet e l'ultimo omaggio dello sposo per la sposa come fidanzato. Lo sposo lo deve comprare e che lo faccia recapitare al mattino a casa della sposa; in realtà è la sposa a sceglierlo in quanto deve armonizzarlo con suo abito. <br><br>Alla fine della cerimonia, la sposa lancia il suo bouquet di fiori verso un gruppo di donne nubili, che competono per afferrarlo; secondo la tradizione la donna che prende il bouquet avrà la fortuna di essere la prossima a sposarsi. 
-                            </p>            
+                            <p class="half-bottom">Questo prezioso oggetto nasce come dono di ringraziamento degli sposi a tutti coloro che partecipano al festeggiamento del matrimonio, considerata ricordo concreto che rimmarrà nel tempo…ma <b>le sue origni risalgono alla lingua francese come bon.bon (dolcetto) e arriva in Italia alla fine del Xv sec. Quando i nobili erano soliti portare con sé cofanetti con dolci e caramelle a base di zucchero</b>..dobbiamo però attendere il 1700 affinchè la bomboniera diventi parte della tradizione italiana, solo con le nozze tra Vittorio Emanuele, principe di Napoli e Elena del Montenegro che la bomboniera diventa oggetto di dono degli sposi agli invitati.
+                            </p> 
+								
 							<!--
                             <div class="portfolio-one-links">
                                 <a href="#"><i class="fa fa-arrow-right"></i> Visit Project</a>
