--- a/giorno.html
+++ b/giorno.html
@@ -14,7 +14,7 @@
 <link rel="apple-touch-startup-image" sizes="1536x2008" href="images/splash/splash-screen-ipad-portrait-retina.png"   media="(device-width: 768px)	and (orientation: portrait)	and (-webkit-device-pixel-ratio: 2)"/>
 <link rel="apple-touch-startup-image" sizes="1496x2048" href="images/splash/splash-screen-ipad-landscape-retina.png"   media="(device-width: 768px)	and (orientation: landscape)	and (-webkit-device-pixel-ratio: 2)"/>
 
-<title>Il Bouquet</title>
+<title>Il Giorno perfetto</title>
 
 <link href="styles/style.css"     		 rel="stylesheet" type="text/css">
 <link href="styles/framework.css" 		 rel="stylesheet" type="text/css">
@@ -119,15 +119,22 @@
                 <div class="portfolio-one">
                     <div class="portfolio-one-item full-bottom">
                         <div class="portfolio-one-image">
-                            <img src="images/pictures/1.jpg" class="responsive-image">
+                            <img src="images/pictures/8.jpg" class="responsive-image">
                         </div>
                         <div class="portfolio-one-text">
-                            <h3 class="title">Il Bouquet</h3>
-                            <em class="subtitle">L'ultimo omaggio del fidanzato</em><br>
+                            <h3 class="title">Il Giorno perfetto</h3>
+                            <em class="subtitle">Come scegliere al meglio il giorno</em><br>
 							<br>
-                            <p class="half-bottom">
-                                Secondo la tradizione il bouquet e l'ultimo omaggio dello sposo per la sposa come fidanzato. Lo sposo lo deve comprare e che lo faccia recapitare al mattino a casa della sposa; in realtà è la sposa a sceglierlo in quanto deve armonizzarlo con suo abito. <br><br>Alla fine della cerimonia, la sposa lancia il suo bouquet di fiori verso un gruppo di donne nubili, che competono per afferrarlo; secondo la tradizione la donna che prende il bouquet avrà la fortuna di essere la prossima a sposarsi. 
-                            </p>            
+                            <p class="half-bottom"><ul class="list">
+                    <li style="padding: 5px;">il lunedì la tradizione indica che reca buona salute, essendo dedicato alla luna, astro e dea delle spose;</li>
+                    <li style="padding: 5px;">il martedì porta ricchezza sicura; </li>
+                    <li style="padding: 5px;">il mercoledì è assai propizio; </li>
+                    <li style="padding: 5px;">il giovedì reca dispiaceri alla sposa; </li>
+                    <li style="padding: 5px;">il venerdì dicono che porti disgrazia; </li>
+                    <li style="padding: 5px;">il sabato è considerato dalla superstizione popolare come il giorno più sfortunato in assoluto anche se e il giorno che la maggior parte delle coppie sceglie per sposarsi.</li>
+                </ul>
+                            </p> 
+								
 							<!--
                             <div class="portfolio-one-links">
                                 <a href="#"><i class="fa fa-arrow-right"></i> Visit Project</a>
